# spotify-mcp

./: Cargo.toml  README.md
src/: error.rs  main.rs  server.rs
src/auth/: mod.rs  oauth.rs  token.rs
src/spotify/: client.rs  library.rs  mod.rs  models.rs  player.rs  playlist.rs  queue.rs  search.rs
src/tools/: library.rs  mod.rs  player.rs  playlist.rs  queue.rs  search.rs
