[package]
name = "spotify-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oauth2 = "5"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
urlencoding = "2"
dotenvy = "0.15"
